--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/assets/images/Favicon-Finable.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
@@ -22,4 +22,11 @@
     <div id="root"></div>
   </body>
 </html>
-<!-- index end -->
+<!-- index end  </head>
+
+  <head>
+  <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+</head>
+
+
+-->
