change of the favicon

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,4 @@
     <div id="root"></div>
   </body>
 </html>
-<!-- index end  </head>
-
-  <head>
-  <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
-</head>
-
-
--->
+<!-- index end -->
