update the signup and updated the incomes

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Finable - Persönliche Finanzverwaltung" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Finablehh</title>
+    <title>Finable</title>
   </head>
   <body>
     <noscript
